src/rs4lk/parser/routeros/antlr4/RouterosParser.py
# Generated from Routeros.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class RouterosParser ( Parser ):

    grammarFileName = "Routeros.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'/interface ethernet'", "'set'", "'['", 
                     "'find'", "'default-name'", "'='", "']'", "'/interface vlan'", 
                     "'add'", "'/ip address'", "'/ipv6 address'", "'/routing bgp connection'", 
                     "'/interface'", "'/'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "INTERFACE_NAME", "WORD", "COMPLEX_WORD", "COMPLEX_WORD2", 
                      "COMPLEX_WORD3", "STRING", "NUMBER", "IP_ADDRESS", 
                      "IPV6_ADDRESS", "IPV6_SHORTHAND", "NETWORK", "IPV6_NETWORK", 
                      "BOOLEAN", "COMMENT", "WS", "CONTINUED_LINE", "NEWLINE" ]

    RULE_config = 0
    RULE_section = 1
    RULE_ethInterfaceSection = 2
    RULE_ethernetConfig = 3
    RULE_vlanInterfaceSection = 4
    RULE_vlanConfig = 5
    RULE_ipv4AddressSection = 6
    RULE_ipv4Config = 7
    RULE_ipv6AddressSection = 8
    RULE_ipv6Config = 9
    RULE_bgpPeeringSection = 10
    RULE_bgpPeeringConfig = 11
    RULE_otherInterfaceSection = 12
    RULE_otherSection = 13
    RULE_otherConfig = 14
    RULE_interfaceName = 15
    RULE_keyValuePair = 16
    RULE_key = 17
    RULE_value = 18
    RULE_list = 19

    ruleNames =  [ "config", "section", "ethInterfaceSection", "ethernetConfig", 
                   "vlanInterfaceSection", "vlanConfig", "ipv4AddressSection", 
                   "ipv4Config", "ipv6AddressSection", "ipv6Config", "bgpPeeringSection", 
                   "bgpPeeringConfig", "otherInterfaceSection", "otherSection", 
                   "otherConfig", "interfaceName", "keyValuePair", "key", 
                   "value", "list" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    INTERFACE_NAME=16
    WORD=17
    COMPLEX_WORD=18
    COMPLEX_WORD2=19
    COMPLEX_WORD3=20
    STRING=21
    NUMBER=22
    IP_ADDRESS=23
    IPV6_ADDRESS=24
    IPV6_SHORTHAND=25
    NETWORK=26
    IPV6_NETWORK=27
    BOOLEAN=28
    COMMENT=29
    WS=30
    CONTINUED_LINE=31
    NEWLINE=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ConfigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(RouterosParser.EOF, 0)

        def section(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RouterosParser.SectionContext)
            else:
                return self.getTypedRuleContext(RouterosParser.SectionContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(RouterosParser.NEWLINE)
            else:
                return self.getToken(RouterosParser.NEWLINE, i)

        def getRuleIndex(self):
            return RouterosParser.RULE_config

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfig" ):
                listener.enterConfig(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfig" ):
                listener.exitConfig(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConfig" ):
                return visitor.visitConfig(self)
            else:
                return visitor.visitChildren(self)




    def config(self):

        localctx = RouterosParser.ConfigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_config)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4294999298) != 0):
                self.state = 42
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1, 8, 10, 11, 12, 13, 14]:
                    self.state = 40
                    self.section()
                    pass
                elif token in [32]:
                    self.state = 41
                    self.match(RouterosParser.NEWLINE)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 47
            self.match(RouterosParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ethInterfaceSection(self):
            return self.getTypedRuleContext(RouterosParser.EthInterfaceSectionContext,0)


        def vlanInterfaceSection(self):
            return self.getTypedRuleContext(RouterosParser.VlanInterfaceSectionContext,0)


        def ipv4AddressSection(self):
            return self.getTypedRuleContext(RouterosParser.Ipv4AddressSectionContext,0)


        def ipv6AddressSection(self):
            return self.getTypedRuleContext(RouterosParser.Ipv6AddressSectionContext,0)


        def bgpPeeringSection(self):
            return self.getTypedRuleContext(RouterosParser.BgpPeeringSectionContext,0)


        def otherInterfaceSection(self):
            return self.getTypedRuleContext(RouterosParser.OtherInterfaceSectionContext,0)


        def otherSection(self):
            return self.getTypedRuleContext(RouterosParser.OtherSectionContext,0)


        def getRuleIndex(self):
            return RouterosParser.RULE_section

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSection" ):
                listener.enterSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSection" ):
                listener.exitSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSection" ):
                return visitor.visitSection(self)
            else:
                return visitor.visitChildren(self)




    def section(self):

        localctx = RouterosParser.SectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_section)
        try:
            self.state = 56
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 49
                self.ethInterfaceSection()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 50
                self.vlanInterfaceSection()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 51
                self.ipv4AddressSection()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 4)
                self.state = 52
                self.ipv6AddressSection()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 5)
                self.state = 53
                self.bgpPeeringSection()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 6)
                self.state = 54
                self.otherInterfaceSection()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 7)
                self.state = 55
                self.otherSection()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EthInterfaceSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(RouterosParser.WORD, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(RouterosParser.NEWLINE)
            else:
                return self.getToken(RouterosParser.NEWLINE, i)

        def otherConfig(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RouterosParser.OtherConfigContext)
            else:
                return self.getTypedRuleContext(RouterosParser.OtherConfigContext,i)


        def ethernetConfig(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RouterosParser.EthernetConfigContext)
            else:
                return self.getTypedRuleContext(RouterosParser.EthernetConfigContext,i)


        def getRuleIndex(self):
            return RouterosParser.RULE_ethInterfaceSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEthInterfaceSection" ):
                listener.enterEthInterfaceSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEthInterfaceSection" ):
                listener.exitEthInterfaceSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEthInterfaceSection" ):
                return visitor.visitEthInterfaceSection(self)
            else:
                return visitor.visitChildren(self)




    def ethInterfaceSection(self):

        localctx = RouterosParser.EthInterfaceSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_ethInterfaceSection)
        try:
            self.state = 75
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.match(RouterosParser.T__0)
                self.state = 59
                self.match(RouterosParser.WORD)
                self.state = 64
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 62
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [32]:
                            self.state = 60
                            self.match(RouterosParser.NEWLINE)
                            pass
                        elif token in [2, 9]:
                            self.state = 61
                            self.otherConfig()
                            pass
                        else:
                            raise NoViableAltException(self)
                 
                    self.state = 66
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.match(RouterosParser.T__0)
                self.state = 72
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 70
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [32]:
                            self.state = 68
                            self.match(RouterosParser.NEWLINE)
                            pass
                        elif token in [2]:
                            self.state = 69
                            self.ethernetConfig()
                            pass
                        else:
                            raise NoViableAltException(self)
                 
                    self.state = 74
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EthernetConfigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def interfaceName(self):
            return self.getTypedRuleContext(RouterosParser.InterfaceNameContext,0)


        def keyValuePair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RouterosParser.KeyValuePairContext)
            else:
                return self.getTypedRuleContext(RouterosParser.KeyValuePairContext,i)


        def getRuleIndex(self):
            return RouterosParser.RULE_ethernetConfig

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEthernetConfig" ):
                listener.enterEthernetConfig(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEthernetConfig" ):
                listener.exitEthernetConfig(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEthernetConfig" ):
                return visitor.visitEthernetConfig(self)
            else:
                return visitor.visitChildren(self)




    def ethernetConfig(self):

        localctx = RouterosParser.EthernetConfigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ethernetConfig)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(RouterosParser.T__1)
            self.state = 86
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.state = 78
                self.match(RouterosParser.T__2)
                self.state = 79
                self.match(RouterosParser.T__3)
                self.state = 80
                self.match(RouterosParser.T__4)
                self.state = 81
                self.match(RouterosParser.T__5)
                self.state = 82
                self.interfaceName()
                self.state = 83
                self.match(RouterosParser.T__6)
                pass
            elif token in [16]:
                self.state = 85
                self.interfaceName()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 89 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 88
                self.keyValuePair()
                self.state = 91 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1966080) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VlanInterfaceSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(RouterosParser.NEWLINE)
            else:
                return self.getToken(RouterosParser.NEWLINE, i)

        def vlanConfig(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RouterosParser.VlanConfigContext)
            else:
                return self.getTypedRuleContext(RouterosParser.VlanConfigContext,i)


        def getRuleIndex(self):
            return RouterosParser.RULE_vlanInterfaceSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVlanInterfaceSection" ):
                listener.enterVlanInterfaceSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVlanInterfaceSection" ):
                listener.exitVlanInterfaceSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVlanInterfaceSection" ):
                return visitor.visitVlanInterfaceSection(self)
            else:
                return visitor.visitChildren(self)




    def vlanInterfaceSection(self):

        localctx = RouterosParser.VlanInterfaceSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vlanInterfaceSection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(RouterosParser.T__7)
            self.state = 98
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 96
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [32]:
                        self.state = 94
                        self.match(RouterosParser.NEWLINE)
                        pass
                    elif token in [9]:
                        self.state = 95
                        self.vlanConfig()
                        pass
                    else:
                        raise NoViableAltException(self)
             
                self.state = 100
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VlanConfigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(RouterosParser.NEWLINE)
            else:
                return self.getToken(RouterosParser.NEWLINE, i)

        def keyValuePair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RouterosParser.KeyValuePairContext)
            else:
                return self.getTypedRuleContext(RouterosParser.KeyValuePairContext,i)


        def getRuleIndex(self):
            return RouterosParser.RULE_vlanConfig

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVlanConfig" ):
                listener.enterVlanConfig(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVlanConfig" ):
                listener.exitVlanConfig(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVlanConfig" ):
                return visitor.visitVlanConfig(self)
            else:
                return visitor.visitChildren(self)




    def vlanConfig(self):

        localctx = RouterosParser.VlanConfigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vlanConfig)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(RouterosParser.T__8)
            self.state = 110
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 108
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [32]:
                        self.state = 102
                        self.match(RouterosParser.NEWLINE)
                        pass
                    elif token in [17, 18, 19, 20]:
                        self.state = 104 
                        self._errHandler.sync(self)
                        _alt = 1
                        while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                            if _alt == 1:
                                self.state = 103
                                self.keyValuePair()

                            else:
                                raise NoViableAltException(self)
                            self.state = 106 
                            self._errHandler.sync(self)
                            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

                        pass
                    else:
                        raise NoViableAltException(self)
             
                self.state = 112
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ipv4AddressSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(RouterosParser.NEWLINE)
            else:
                return self.getToken(RouterosParser.NEWLINE, i)

        def ipv4Config(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RouterosParser.Ipv4ConfigContext)
            else:
                return self.getTypedRuleContext(RouterosParser.Ipv4ConfigContext,i)


        def getRuleIndex(self):
            return RouterosParser.RULE_ipv4AddressSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIpv4AddressSection" ):
                listener.enterIpv4AddressSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIpv4AddressSection" ):
                listener.exitIpv4AddressSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIpv4AddressSection" ):
                return visitor.visitIpv4AddressSection(self)
            else:
                return visitor.visitChildren(self)




    def ipv4AddressSection(self):

        localctx = RouterosParser.Ipv4AddressSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ipv4AddressSection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(RouterosParser.T__9)
            self.state = 118
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 116
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [32]:
                        self.state = 114
                        self.match(RouterosParser.NEWLINE)
                        pass
                    elif token in [9]:
                        self.state = 115
                        self.ipv4Config()
                        pass
                    else:
                        raise NoViableAltException(self)
             
                self.state = 120
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ipv4ConfigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(RouterosParser.NEWLINE)
            else:
                return self.getToken(RouterosParser.NEWLINE, i)

        def keyValuePair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RouterosParser.KeyValuePairContext)
            else:
                return self.getTypedRuleContext(RouterosParser.KeyValuePairContext,i)


        def getRuleIndex(self):
            return RouterosParser.RULE_ipv4Config

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIpv4Config" ):
                listener.enterIpv4Config(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIpv4Config" ):
                listener.exitIpv4Config(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIpv4Config" ):
                return visitor.visitIpv4Config(self)
            else:
                return visitor.visitChildren(self)




    def ipv4Config(self):

        localctx = RouterosParser.Ipv4ConfigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ipv4Config)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(RouterosParser.T__8)
            self.state = 130
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,19,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 128
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [32]:
                        self.state = 122
                        self.match(RouterosParser.NEWLINE)
                        pass
                    elif token in [17, 18, 19, 20]:
                        self.state = 124 
                        self._errHandler.sync(self)
                        _alt = 1
                        while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                            if _alt == 1:
                                self.state = 123
                                self.keyValuePair()

                            else:
                                raise NoViableAltException(self)
                            self.state = 126 
                            self._errHandler.sync(self)
                            _alt = self._interp.adaptivePredict(self._input,17,self._ctx)

                        pass
                    else:
                        raise NoViableAltException(self)
             
                self.state = 132
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,19,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ipv6AddressSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(RouterosParser.NEWLINE)
            else:
                return self.getToken(RouterosParser.NEWLINE, i)

        def ipv6Config(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RouterosParser.Ipv6ConfigContext)
            else:
                return self.getTypedRuleContext(RouterosParser.Ipv6ConfigContext,i)


        def getRuleIndex(self):
            return RouterosParser.RULE_ipv6AddressSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIpv6AddressSection" ):
                listener.enterIpv6AddressSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIpv6AddressSection" ):
                listener.exitIpv6AddressSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIpv6AddressSection" ):
                return visitor.visitIpv6AddressSection(self)
            else:
                return visitor.visitChildren(self)




    def ipv6AddressSection(self):

        localctx = RouterosParser.Ipv6AddressSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ipv6AddressSection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(RouterosParser.T__10)
            self.state = 138
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,21,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 136
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [32]:
                        self.state = 134
                        self.match(RouterosParser.NEWLINE)
                        pass
                    elif token in [9]:
                        self.state = 135
                        self.ipv6Config()
                        pass
                    else:
                        raise NoViableAltException(self)
             
                self.state = 140
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,21,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ipv6ConfigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(RouterosParser.NEWLINE)
            else:
                return self.getToken(RouterosParser.NEWLINE, i)

        def keyValuePair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RouterosParser.KeyValuePairContext)
            else:
                return self.getTypedRuleContext(RouterosParser.KeyValuePairContext,i)


        def getRuleIndex(self):
            return RouterosParser.RULE_ipv6Config

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIpv6Config" ):
                listener.enterIpv6Config(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIpv6Config" ):
                listener.exitIpv6Config(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIpv6Config" ):
                return visitor.visitIpv6Config(self)
            else:
                return visitor.visitChildren(self)




    def ipv6Config(self):

        localctx = RouterosParser.Ipv6ConfigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_ipv6Config)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(RouterosParser.T__8)
            self.state = 150
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,24,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 148
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [32]:
                        self.state = 142
                        self.match(RouterosParser.NEWLINE)
                        pass
                    elif token in [17, 18, 19, 20]:
                        self.state = 144 
                        self._errHandler.sync(self)
                        _alt = 1
                        while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                            if _alt == 1:
                                self.state = 143
                                self.keyValuePair()

                            else:
                                raise NoViableAltException(self)
                            self.state = 146 
                            self._errHandler.sync(self)
                            _alt = self._interp.adaptivePredict(self._input,22,self._ctx)
